[package]
name = "mdbook-sspaeti"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mdbook-sspaeti"
path = "src/main.rs"

[dependencies]
mdbook = "0.4.30"
regex = "1.8.4"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.5.11"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
url = "2.3.1"
