[package]
name = "mdbook-sspaeti"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "mdbook-sspaeti"
path = "src/main.rs"

[dependencies]
mdbook-preprocessor = "0.5"
regex = "1.8.4"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
toml = "0.9"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking"] }
url = "2.3.1"
